// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`background: #ffffff: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`background: #ffffff: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "background-color": {
      "setterCode": "backgroundColor(0xffffffff)",
      "valueCode": "0xffffffff",
    },
    "background-image": {
      "setterCode": "backgroundImage(null)",
      "valueCode": "null",
    },
  },
}
`;

exports[`background: none: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "background-color",
        "important": undefined,
        "prop": "backgroundColor",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "none",
        Symbol(normalized): true,
      },
      "text": "ERROR: property value \`none\` is not valid for \`background-color\`",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`background: none: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "background-color",
        "important": undefined,
        "prop": "backgroundColor",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "none",
        Symbol(normalized): true,
      },
      "text": "ERROR: property value \`none\` is not valid for \`background-color\`",
      "type": "warning",
    },
  ],
  "obj": {
    "background-image": {
      "setterCode": "backgroundImage(null)",
      "valueCode": "null",
    },
  },
}
`;

exports[`background-clip: border-box: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "background-clip",
        "important": false,
        "prop": "backgroundClip",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "border-box",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "WARNING: \`background-clip\` is not a standard property name (may not be supported)",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`background-clip: border-box: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "background-clip",
        "important": false,
        "prop": "backgroundClip",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "border-box",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "WARNING: \`background-clip\` is not a standard property name (may not be supported)",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`background-clip: content-box: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "background-clip",
        "important": false,
        "prop": "backgroundClip",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "content-box",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "WARNING: \`background-clip\` is not a standard property name (may not be supported)",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`background-clip: content-box: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "background-clip",
        "important": false,
        "prop": "backgroundClip",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "content-box",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "WARNING: \`background-clip\` is not a standard property name (may not be supported)",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`background-clip: padding-box: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "background-clip",
        "important": false,
        "prop": "backgroundClip",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "padding-box",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "WARNING: \`background-clip\` is not a standard property name (may not be supported)",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`background-clip: padding-box: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "background-clip",
        "important": false,
        "prop": "backgroundClip",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "padding-box",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "WARNING: \`background-clip\` is not a standard property name (may not be supported)",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`background-color: #00ff00: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`background-color: #00ff00: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "background-color": {
      "setterCode": "backgroundColor(0xff00ff00)",
      "valueCode": "0xff00ff00",
    },
  },
}
`;

exports[`background-color: red: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`background-color: red: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "background-color": {
      "setterCode": "backgroundColor(0xffff0000)",
      "valueCode": "0xffff0000",
    },
  },
}
`;

exports[`background-color: rgba(0,0,255,0.5): app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`background-color: rgba(0,0,255,0.5): app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "background-color": {
      "setterCode": "backgroundColor(0x800000ff)",
      "valueCode": "0x800000ff",
    },
  },
}
`;

exports[`background-image: linear-gradient(to bottom, rgba(255, 255, 0, 0.5), rgba(0, 0, 255, 0.5)): app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`background-image: linear-gradient(to bottom, rgba(255, 255, 0, 0.5), rgba(0, 0, 255, 0.5)): app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "background-image": {
      "setterCode": "backgroundImage(new UniNativeLinearGradient(UTSCPP.propertyAccess(UniNativeLinearGradientDirectionType, "::", "ToBottom"),[new UniNativeLinearGradientColorStop(0x80ffff00, 0),new UniNativeLinearGradientColorStop(0x800000ff, 0)]))",
      "valueCode": "new UniNativeLinearGradient(UTSCPP.propertyAccess(UniNativeLinearGradientDirectionType, "::", "ToBottom"),[new UniNativeLinearGradientColorStop(0x80ffff00, 0),new UniNativeLinearGradientColorStop(0x800000ff, 0)])",
    },
  },
}
`;

exports[`background-image: linear-gradient(to bottom,#f5f5f5,#eff2f5): app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`background-image: linear-gradient(to bottom,#f5f5f5,#eff2f5): app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "background-image": {
      "setterCode": "backgroundImage(new UniNativeLinearGradient(UTSCPP.propertyAccess(UniNativeLinearGradientDirectionType, "::", "ToBottom"),[new UniNativeLinearGradientColorStop(0xfff5f5f5, 0),new UniNativeLinearGradientColorStop(0xffeff2f5, 0)]))",
      "valueCode": "new UniNativeLinearGradient(UTSCPP.propertyAccess(UniNativeLinearGradientDirectionType, "::", "ToBottom"),[new UniNativeLinearGradientColorStop(0xfff5f5f5, 0),new UniNativeLinearGradientColorStop(0xffeff2f5, 0)])",
    },
  },
}
`;

exports[`background-image: linear-gradient(to left, red, yellow): app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`background-image: linear-gradient(to left, red, yellow): app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "background-image": {
      "setterCode": "backgroundImage(new UniNativeLinearGradient(UTSCPP.propertyAccess(UniNativeLinearGradientDirectionType, "::", "ToLeft"),[new UniNativeLinearGradientColorStop(0xffff0000, 0),new UniNativeLinearGradientColorStop(0xffffff00, 0)]))",
      "valueCode": "new UniNativeLinearGradient(UTSCPP.propertyAccess(UniNativeLinearGradientDirectionType, "::", "ToLeft"),[new UniNativeLinearGradientColorStop(0xffff0000, 0),new UniNativeLinearGradientColorStop(0xffffff00, 0)])",
    },
  },
}
`;
